Add get all trainings endpoint
