# app/Models/ClientTraining.php
@@ -2,6 +2,8 @@
 
 namespace App\Models;
 
+use App\Enums\TrainingStatuses;
+use App\Enums\UserRoles;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
@@ -15,8 +17,13 @@ class ClientTraining extends Model
         'status',
     ];
 
-    public function trainer()
+    public function training()
     {
-        return $this->belongsTo(Training::class);
+        return $this->belongsTo(Training::class, 'training_id')->where('status', '!=', TrainingStatuses::CANCELLED);
+    }
+
+    public function client()
+    {
+        return $this->belongsTo(User::class, 'client_id')->where('role', UserRoles::CLIENT);
     }
 }
