# app/Models/Training.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use App\Enums\TrainingStatuses;
+use App\Enums\UserRoles;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
@@ -20,5 +21,11 @@ class Training extends Model
     public function records()
     {
         return $this->hasMany(ClientTraining::class)->whereNotIn('status', [TrainingStatuses::CANCELLED]);
+    }
+
+
+    public function trainer()
+    {
+        return $this->belongsTo(User::class, 'client_id')->where('role', UserRoles::TRAINER);
     }
 }
